low contrast problem fixed

--- a/P4-Project-Updates/style.css
+++ b/P4-Project-Updates/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: #FFF;
+    background: rgb(14, 0, 0);
     overflow-x: hidden;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
